added 2 Trading View Sites
Both have premium options for free (Like adding more than 3 indicators)

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         <h1>Welcome to Om Invest 📈</h1>
         <nav>
             <ul>
+                <li><a href="https://charting-library.tradingview-widget.com/">🔥 TradingView Advanced Charts (more than 3 indicators)</a></li>
+                <li><a href="https://trading-terminal.tradingview-widget.com/">🔥 TradingView - Trading Platform</a></li>
                 <li><a href="https://www.tipranks.com/stocks/asml/forecast">🔥 Stock Forecast - Tipranks</a></li>
                 <li><a href="https://stocktwits.com/rankings/trending">🚀 Trending stocks - Stocktwits</a></li>
                 <li><a href="http://openinsider.com/">🕵️‍♂️ Insider Trading Screener</a></li>
